standalone_inv-scatter_ddrm_sandbox/.intermediate/open_url/attempt_9/execution_log.txt
  File "/fs-computility-new/UPDZ02_sunhe/shared/QA_yixuan/standalone_inv-scatter_ddrm_sandbox/test_open_url.py", line 34
    if 'USERPRO
       ^
SyntaxError: unterminated string literal (detected at line 34)
